Fri Jul 18 23:04:50 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances/README:
        * tests/DCPS/Instances/run_test.pl:
    
          Updated README and modified run_test.pl's argument processing 

Fri Jul 18 17:35:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tools/excelRTD/RTDServerDLL.cpp:

                Fixed build error for wide-char builds.

Fri Jul 18 16:24:37 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances/PubDriver.h:

          Made std::string topic_name const

        * tests/DCPS/Instances/SubDriver.h:

          Provided template call parameter to topic_facade.reader()
          method to set DATAREADER_QOS_USE_TOPIC_QOS QOS property when
          creating a datareader.

          Made std::string topic_name const

Fri Jul 18 00:14:49 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances:

          Updated svn:ignore list

        * tests/DCPS/Instances/SubDriver.h:

          removed SetDataReaderQOS setting

Thu Jul 17 23:45:35 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances:

          Added svn:ignore property

        * tests/DCPS/Instances/PubDriver.h:
        * tests/DCPS/Instances/Publisher.cpp:
        * tests/DCPS/Instances/SubDriver.h:
        * tests/DCPS/Instances/Subscriber.cpp:

          Resolved wait logic errors and made most log output conditional
          on DCPSLogLevel setting

Thu Jul 17 13:21:31 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed wait_pending() so timeout condition is properly detected.

Wed Jul 16 17:43:31 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>

        * tests/DCPS/Instances/Instances.mpc:
        * tests/DCPS/Instances/KeyedData.idl:
        * tests/DCPS/Instances/NoKeyData.idl:
        * tests/DCPS/Instances/PubDriver.h:
        * tests/DCPS/Instances/Publisher.cpp: